# polpettone-pomodoro-timer

./: Cargo.toml  config.toml  readme.md
src/: command.rs  main.rs
src/config/: mod.rs
src/date_time/: mod.rs
src/display/: mod.rs
src/gui/: mod.rs
src/session/: mod.rs
src/session/date_time/: mod.rs
src/tui/: app.rs  events.rs  mod.rs
src/tui/components/: mod.rs  (+8 more)
src/view/: mod.rs
test-data/: 20251130221721-session.yaml  20251201014021-session.yaml  20251201235421-session.yaml  20251202143321-session.yaml  20251203012621-session.yaml  20251203123521-session.yaml  20251203211021-session.yaml  20251204083421-session.yaml  20251204101921-session.yaml  20251204140121-session.yaml  20251204180021-session.yaml  20251204234721-session.yaml  20251205052121-session.yaml  20251205054621-session.yaml  20251205153321-session.yaml  20251205164421-session.yaml  20251206002021-session.yaml  20251206144821-session.yaml  20251207034121-session.yaml  20251207054121-session.yaml  20251207122121-session.yaml  20251210074721-session.yaml  20251210172921-session.yaml  20251211192821-session.yaml  20251213033321-session.yaml  20251213143321-session.yaml  20251214171221-session.yaml  20251216052521-session.yaml  20251216114221-session.yaml  20251216211121-session.yaml  20251218124921-session.yaml  20251218170621-session.yaml  20251219162121-session.yaml  20251220021421-session.yaml  20251220225621-session.yaml  20251221015321-session.yaml  20251224220921-session.yaml  20251224223621-session.yaml  20251225060521-session.yaml  20251225065921-session.yaml  (+10 more)
tests/: cli_tests.rs
