[package]
name = "pomodoro"
version = "0.1.0"
edition = "2021"


[dependencies]
structopt = "0.3.26"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8.19"
tempfile = "3.3"
comfy-table = "7.1.3"
serde_json = "1.0.64"
dialoguer = "0.11.0"
